...
      const LatLng(45.49354346222445, -73.57859859130102),
    ],
  ),
  CampusBuilding(
    id: '017E9EC7C83D5B2D799F',
    name: 'H',
    fullName: 'Henry F. Hall Building',
    description: "1455 Blvd. De Maisonneuve Ouest H3G 1M8",
    campus: Campus.sgw,
    isWheelchairAccessible: true,
    hasBikeParking: true,
    hasCarParking: false,
    openingHours: ['Regular Access: Monday to Friday 7:00am to 11:00pm, Saturday and Sunday 7:00am to 9:00pm','Restricted Access: 24/7'],
...
